Refactor to cleanup the repo
